--- a/Final Project.Api/appsettings.json
+++ b/Final Project.Api/appsettings.json
@@ -9,6 +9,12 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=db10395.public.databaseasp.net; Database=db10395; User Id=db10395; Password=3Eo_-4Fb5k%J; Encrypt=False; "
+  },
+  "JWT": {
+    "Key": "your_long_secret_key_32_characters",
+    "ValidIssuer": "amr",
+    "validAudience": "MySecureKey",
+    "DurationInDays": "10"
   }
 
 }
