--- a/Final Project.Api/FinalProject.Api.csproj
+++ b/Final Project.Api/FinalProject.Api.csproj
@@ -9,6 +9,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="wwwroot\**" />
+    <Content Remove="wwwroot\**" />
+    <EmbeddedResource Remove="wwwroot\**" />
+    <None Remove="wwwroot\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.10">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -27,7 +34,6 @@
 
 	<ItemGroup>
     <Folder Include="Uploads\" />
-    <Folder Include="wwwroot\" />
   </ItemGroup>
 
 </Project>
